[gd_scene load_steps=6 format=3 uid="uid://dq8pb4523etke"]

[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="1_f6dfe"]
[ext_resource type="Script" uid="uid://dnlvrycvypu7w" path="res://Scripts/Components/status_box.gd" id="1_lfr6j"]
[ext_resource type="Texture2D" uid="uid://dc8lwqptd87mr" path="res://Resources/StatIcons/StatusIcons/status_acid.tres" id="3_0kncm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grwhm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfr6j"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="StatusBox" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lfr6j")

[node name="mainPanel" type="Panel" parent="."]
layout_mode = 1
offset_right = 119.0
offset_bottom = 78.0
theme = ExtResource("1_f6dfe")
theme_override_styles/panel = SubResource("StyleBoxFlat_grwhm")

[node name="MarginContainer" type="MarginContainer" parent="mainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="mainPanel/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lfr6j")

[node name="MarginContainer" type="MarginContainer" parent="mainPanel/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="mainPanel/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="picStatus" type="TextureRect" parent="mainPanel/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_0kncm")
expand_mode = 1

[node name="lblAmount" type="Label" parent="mainPanel/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
